--- a/Assignment_10.ipynb
+++ b/Assignment_10.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "json_data = open(\"/Users/ziweizheng/study/540_NLP/anly540_apple.json\").readlines()\n",
+    "json_data = open(\"./anly540_apple.json\").readlines()\n",
     "feeds_read_from_file = []\n",
     "for line in json_data:\n",
     "    feeds_read_from_file.append(json.loads(line))"
@@ -447,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
