--- a/Assignment_7.ipynb
+++ b/Assignment_7.ipynb
@@ -11,12 +11,12 @@
     "import numpy as np\n",
     "from gensim.models import KeyedVectors\n",
     "\n",
-    "model_path = '/Users/ziweizheng/study/540_NLP/'"
+    "model_path = './'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
